--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "uvicorn>=0.34.0",
     "google-search-results>=2.4.2",
     "python-dotenv>=1.0.1",
-    "langchain-google-genai>=2.0.9",
+    "langchain-google-genai==2.0.7",
     "scikit-image>=0.25.2",
     "matplotlib>=3.10.7",
     "diffusers",
